--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fotoblog</title>
@@ -8,12 +14,32 @@
   </head>
   <body>
     <div id="app">
-      <header class="container"></header>
+      <header class="container">
+        <nav>
+          <img src="./images/camera.svg" alt="Imagem da logomarca" />
+
+          <ul>
+            <li>Home</li>
+            <li class="active">Galeria</li>
+          </ul>
+        </nav>
+
+        <form action=""></form>
+
+        <img class="avatar"
+          src="https://randomuser.me/api/portraits/women/5.jpg"
+          alt="Imagem de uma mulher"
+        />
+
+        <div class="avatar"></div>
+      </header>
       <main>
         <div class="container"></div>
       </main>
 
-      <footer class="container"></footer>
+      <footer class="container">
+        <p>© 2024 - Rocketseat Explorer</p>
+      </footer>
     </div>
   </body>
 </html>
