--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
           </ul>
         </nav>
 
-        <form action=""></form>
+        <form>
+          <div class="input-wrapper">
+            <label for="search"> Pesquise por imagens e coleções</label>
+            <input id="search" type="text" placeholder="Pesquise por imagens e coleções" />
+          </div>
+        </form>
 
-        <img class="avatar"
+        <img
+          class="avatar"
           src="https://randomuser.me/api/portraits/women/5.jpg"
           alt="Imagem de uma mulher"
         />
