--- a/index.html
+++ b/index.html
@@ -40,7 +40,109 @@
         <div class="avatar"></div>
       </header>
       <main>
-        <div class="container"></div>
+        <div class="container">
+          <h1>Galeria</h1>
+          <section class="gallery">
+            <figure class="item">
+              <img src="https://source.unsplash.com/VS-WRkyuax4" alt="Imagem de um homeoffice estilizado">
+
+              <figcaption class="details">
+                <h2>Workspace elétrica</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="item">
+              <img src="https://source.unsplash.com/yQnyP1g5zl4" alt="Imagem de um teclado e moouse em tons de preto e vermelho">
+
+              <figcaption class="details">
+                <h2>Dark and red</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="item">
+              <img src="https://source.unsplash.com/LAY19dUD_ro" alt="Imagem de um setup estilizado com iluminação em tons de roxo">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="item">
+              <img src="https://source.unsplash.com/9856jObeogs" alt="Imagem de um setup estilizado com iluminação de colméia">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="item">
+              <img src="https://source.unsplash.com/iwJscb2Ezsk" alt="Imagem de um setup minimalista">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="item">
+              <img src="https://source.unsplash.com/fwfobhsF1Kw" alt="Imagem de um setup ergonômico">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure>
+            
+             <figure class="item">
+              <img src="https://source.unsplash.com/gvptKmonylk" alt="Imagem de com iluminação indireta">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure> 
+
+             <figure class="item">
+              <img src="https://source.unsplash.com/d1Wj9qU5C-o" alt="Imagem de um setup com gato">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure> 
+
+             <figure class="item">
+              <img src="https://source.unsplash.com/IMYU7kmPLwI" alt="Imagem de uma série de monitores exibindo códigos">
+
+              <figcaption class="details">
+                <h2>Organização e grids</h2>
+                <div class="tag">
+                  <span>tag</span>
+                </div>
+              </figcaption>
+            </figure> 
+          </div>
+        </div>
       </main>
 
       <footer class="container">
