--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
               <figcaption class="details">
                 <h2>Workspace elétrica</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -59,7 +59,7 @@
 
               <figcaption class="details">
                 <h2>Dark and red</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -70,7 +70,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -81,7 +81,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -92,7 +92,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -103,7 +103,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -114,7 +114,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -125,7 +125,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
@@ -136,7 +136,7 @@
 
               <figcaption class="details">
                 <h2>Organização e grids</h2>
-                <div class="tag">
+                <div class="tags">
                   <span>tag</span>
                 </div>
               </figcaption>
