--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <img src="https://source.unsplash.com/9856jObeogs" alt="Imagem de um setup estilizado com iluminação de colméia">
 
               <figcaption class="details">
-                <h2>Organização e grids</h2>
+                <h2>Colméia</h2>
                 <div class="tags">
                   <span>tag</span>
                 </div>
@@ -91,7 +91,7 @@
               <img src="https://source.unsplash.com/iwJscb2Ezsk" alt="Imagem de um setup minimalista">
 
               <figcaption class="details">
-                <h2>Organização e grids</h2>
+                <h2>Setup de escritor</h2>
                 <div class="tags">
                   <span>tag</span>
                 </div>
@@ -102,7 +102,7 @@
               <img src="https://source.unsplash.com/fwfobhsF1Kw" alt="Imagem de um setup ergonômico">
 
               <figcaption class="details">
-                <h2>Organização e grids</h2>
+                <h2>Ergonomia e cores</h2>
                 <div class="tags">
                   <span>tag</span>
                 </div>
@@ -113,7 +113,7 @@
               <img src="https://source.unsplash.com/gvptKmonylk" alt="Imagem de com iluminação indireta">
 
               <figcaption class="details">
-                <h2>Organização e grids</h2>
+                <h2>Show de luzes</h2>
                 <div class="tags">
                   <span>tag</span>
                 </div>
@@ -124,7 +124,7 @@
               <img src="https://source.unsplash.com/d1Wj9qU5C-o" alt="Imagem de um setup com gato">
 
               <figcaption class="details">
-                <h2>Organização e grids</h2>
+                <h2>Deep purple</h2>
                 <div class="tags">
                   <span>tag</span>
                 </div>
@@ -135,7 +135,7 @@
               <img src="https://source.unsplash.com/IMYU7kmPLwI" alt="Imagem de uma série de monitores exibindo códigos">
 
               <figcaption class="details">
-                <h2>Organização e grids</h2>
+                <h2>Multi-Screen</h2>
                 <div class="tags">
                   <span>tag</span>
                 </div>
