--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay:0.6s">
               <img src="https://source.unsplash.com/yQnyP1g5zl4" alt="Imagem de um teclado e moouse em tons de preto e vermelho">
 
               <figcaption class="details">
@@ -65,7 +65,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay:0.8s">
               <img src="https://source.unsplash.com/LAY19dUD_ro" alt="Imagem de um setup estilizado com iluminação em tons de roxo">
 
               <figcaption class="details">
@@ -76,7 +76,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item"style="--delay:1s">
               <img src="https://source.unsplash.com/9856jObeogs" alt="Imagem de um setup estilizado com iluminação de colméia">
 
               <figcaption class="details">
@@ -87,7 +87,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay:1.2s">
               <img src="https://source.unsplash.com/iwJscb2Ezsk" alt="Imagem de um setup minimalista">
 
               <figcaption class="details">
@@ -98,7 +98,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay:1.4s">
               <img src="https://source.unsplash.com/fwfobhsF1Kw" alt="Imagem de um setup ergonômico">
 
               <figcaption class="details">
@@ -109,7 +109,7 @@
               </figcaption>
             </figure>
             
-             <figure class="item">
+             <figure class="item" style="--delay:1.6s">
               <img src="https://source.unsplash.com/gvptKmonylk" alt="Imagem de com iluminação indireta">
 
               <figcaption class="details">
@@ -120,7 +120,7 @@
               </figcaption>
             </figure> 
 
-             <figure class="item">
+             <figure class="item" style="--delay:1.8s">
               <img src="https://source.unsplash.com/d1Wj9qU5C-o" alt="Imagem de um setup com gato">
 
               <figcaption class="details">
@@ -131,7 +131,7 @@
               </figcaption>
             </figure> 
 
-             <figure class="item">
+             <figure class="item" style="--delay:2s">
               <img src="https://source.unsplash.com/IMYU7kmPLwI" alt="Imagem de uma série de monitores exibindo códigos">
 
               <figcaption class="details">
